[package]
name = "neural_tictactoe_rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
byte-unit = "4.0.14"
rand = "0.8.5"
rand_distr = "0.4.3"
nalgebra = { version = "0.31.2", features = ["serde-serialize"] }
console = "0.15.2"
dialoguer = "0.10.2"
serde = { version = "1.0.147", features = ["derive"] }
serde_json = "1.0.87"

